Fix z-index issues, add styled time display. Hide model dimension details by default (but can be displayed via url parameter)

--- a/src/components/simulation-info.scss
+++ b/src/components/simulation-info.scss
@@ -1,11 +1,7 @@
 @import "common.scss";
 
 .simulationInfo{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  height: 0;
   .zone{
     position: absolute;
     top: 34px;
@@ -15,6 +11,7 @@
     padding: 6px;
     border: solid 1px $controlGray;
     background-color: $zone1Red;
+    z-index: 2;
     &.zone1{
       background-color: $zone1Red;
     }
@@ -73,14 +70,15 @@
   .windContainer{
     width: 90px;
     height: 118px;
-    position: relative;
-    top: 100px;
+    position: fixed;
+    top: 60px;
     left: 10px;
     background: white;
     border-radius: 4px;
     border: solid 1px $controlGray;
     text-align: center;
     color: $controlText;
+    z-index: 2;
 
     .windHeader{
       font-family: Lato;
